--- a/assessment.html
+++ b/assessment.html
@@ -136,10 +136,11 @@
                     <br>
           this sport.
           <br>
+          <!--Radio buttons should share the same name attribute-->
           For this sport I prefer the:
-            <label><input type="radio" name="sportLevel1" value="amateur">Amateur</label>
-              <label><input type="radio" name="sportLevel2" value="college">College</label>
-                <label><input type="radio" name="sportLevel3" value="professional">Professional</label>
+            <label><input type="radio" name="sportLevel" value="amateur">Amateur</label>
+              <label><input type="radio" name="sportLevel" value="college">College</label>
+                <label><input type="radio" name="sportLevel" value="professional">Professional</label>
                 <br>
                 <input type="submit" value="Submit Query">
               </form>
